--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src = "submit.js"></script>
-        <script src="loadStackOverflowData.js"></script>
         <style>
         </style>
     </head>
@@ -23,9 +22,8 @@
               </div>
             </form>
             <button type="submit" class="btn btn-default" id="submit">Submit</button>
-            <div id = "check">
-                
-            </div>
+            <br />
+            <a href = "signup.html">SignUp!</a>
           </div>
     </body>
 </html>
