--- a/visualizations.html
+++ b/visualizations.html
@@ -21,6 +21,9 @@
         </div>
         <div class="container" id="plot2">
 
-            </div>
+        </div>
+        <div class="container" id="plot3" align="center">
+
+        </div>
     </body>
 </html>
