--- a/index.html
+++ b/index.html
@@ -8,20 +8,22 @@
         </style>
     </head>
     <body>
+        <nav class="navbar fixed-top navbar-dark bg-primary">
+        </nav>
         <div class="container">
-            <h2>Login Page</h2>
-            <p>Please enter your Username and password</p>
+            <h2 align ='center'>Login Page</h2>
+            <p align ='center'>Please enter your Username and password</p>
             <form>
-              <div class="login">
+              <div class="login" align = 'center'>
                 <label for="usr">Username:</label>
-                <input type="text" class="form-control" id="username">
+                <input type="text" class="form-control" id="username" style="width:300px">
               </div>
-              <div class="form-group">
+              <div class="form-group" align = 'center'>
                 <label for="pwd">Password:</label>
-                <input type="password" class="form-control" id="password">
+                <input type="password" class="form-control" id="password"style="width:300px">
               </div>
             </form>
-            <button type="submit" class="btn btn-default" id="submit">Submit</button>
+            <button type="submit" class="btn btn-default" id="submit" align ='center'>Submit</button>
             <br />
             <a href = "signup.html">SignUp!</a>
           </div>
