--- a/secondPage.html
+++ b/secondPage.html
@@ -29,7 +29,7 @@
               <div class="modal-content">
                 <div class="modal-header">
                   <button type="button" class="close" data-dismiss="modal">&times;</button>
-                  <h4 class="modal-title">Add a new post to stack overflow data</h4>
+                  <h4 class="modal-title">Add a new post to Stack Overflow Data</h4>
                 </div>
                 <div class="modal-body">
                         <form class="form-horizontal" role="form">
