--- a/signup.html
+++ b/signup.html
@@ -5,26 +5,31 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src = "signup.js"></script>
         <style>
+          #submit{
+            margin-left:33%; 
+          }
         </style>
     </head>
     <body>
+        <nav class="navbar fixed-top navbar-dark bg-primary">
+            <h2 align = 'center'>Signup Page</h2>
+        </nav>
         <div class="container">
-            <h2>Signup Page</h2>
-            <p>Please enter your details</p>
+            <h3 align = 'center'>Please enter your details</h3>
             <form>
-              <div class="login">
+              <div class="login" align = 'center'>
                 <label for="usr">First Name:</label>
-                <input type="text" class="form-control" id="firstname", required>
+                <input type="text" class="form-control" id="firstname", required style="width:400px">
                 <label for="usr">Last Name:</label>
-                <input type="text" class="form-control" id="lastname" required>
+                <input type="text" class="form-control" id="lastname" required style="width:400px">
                 <label for="usr">UserName:</label>
-                <input type="text" class="form-control" id="username" required>
+                <input type="text" class="form-control" id="username" required style="width:400px">
               </div>
-              <div class="form-group">
+              <div class="form-group" align = 'center'>
                 <label for="pwd">Password:</label>
-                <input type="password" class="form-control" id="password" required>
+                <input type="password" class="form-control" id="password" required style="width:400px">
                 <label for="pwd">Confirm Password:</label>
-                <input type="password" class="form-control" id="confirmPassword" required>
+                <input type="password" class="form-control" id="confirmPassword" required style="width:400px">
               </div>
             </form>
             <button type="submit" class="btn btn-default" id="submit">SignUp</button>
